Only construct Observation.Context for Chat and Vector ops on Model observations.
* Simplify and polish code in OpenAI using the API with Spring constructs and Builders.
* Simplify common code expressions used in AI provider ChatModels with ValueUtils.
* Apply whitespace to improve readability.

Closes #1661